    ADDED: CTRL-L shortcut to go to the location bar (origin) as in firefox and
           konqueror
    ADDED: filters for selecting files
    ADDED: New zip/tar slave - based on KDE's but support writing to archive

  CHANGED: Use WhatsThis in favour of tooltips where reasonable
  CHANGED: the panel startup is profile based instead of directory based

    FIXED: krarc error, when the filename contains '$' or '&'
    FIXED: synchronizer, compare by content can be terminated by <Stop>
    FIXED: preserve date fails at moving
    FIXED: bookmark issues (http://www.krusader.org/phpBB/viewtopic.php?p=6357#6357)
    FIXED: [ 1278534 ] Krusader hangs when packing search results
    FIXED: [ 1201586 ] wrong encoding of slovenian translation
    FIXED: [ 1169980 ] User Actions Titles are not stored in system encoding
           (thanks Vaclav Juza)
    FIXED: '-icon' as well as '--icon' as command-line arguments are handled
    FIXED: [ 1272583 ] fixes on the .desktop files, thanks Marcin Garski
    FIXED: [ 1217697 ] Can't translate some Bookman II menu entries
    FIXED: [ 1243409 ] encoding problem and bad plural in trash files dialog
    FIXED: [ 1253323 ] middle click crash on ".." directory
    FIXED: burst refresh if FAM is enabled
    FIXED: crash when "run in terminal mode" was active on a directory with
           insufficient permissions (thanks Oleksandr Shneyder)
    FIXED: [ 1213137 ] javascript self.close() causes crash in the viewer
    FIXED: Control+Delete can be used in those distributions where Shift+Delete
           doesn't work
    FIXED: [ 1186534 ] problems with the new network connection (port, path,
           password, username)
    FIXED: renaming does not change the view, until VFS sends a signal about the
           rename actually being done
    FIXED: [ 1174273 ] updating the status bar at pressing the arrow keys
    FIXED: calcspace and diskusage shows the same size
    FIXED: [ 1180202 ] calcspace calculates wrong size for symbolic links